--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
-foolbox
-scipy>=1.1.0
-numpy>=1.14.2
-torch>=1.1.0
-torchvision>=0.3.0
-tqdm>=4.19.9
-setuptools>=39.0.1
-matplotlib>=2.1.0
-gym>=0.10.4
-scikit_image>=0.13.1
-scikit_learn>=0.19.1
-opencv-python>=3.4.0.12
-sphinx_rtd_theme>=0.4.1
-pytest>=3.4.0
-cython>=0.28.5
-pandas>=0.23.4
-tensorboardX>=1.7
-pre-commit
-
+ANNarchy==4.7.2.3
+brian2==2.5.1
+brian2genn==1.6
+experiments==0.1.0
+gym==0.18.3
+matplotlib==3.3.4
+nengo==3.2.0
+nest==0.4.1
+numpy==1.20.1
+opencv_python==4.5.2.54
+pandas==1.2.4
+Pillow==8.2.0
+scikit_learn==0.24.1
+scipy==1.6.2
+setuptools==65.5.0
+tensorboardX==2.6.1
+torch==1.7.1+cpu
+torchvision==0.8.2+cpu
+tqdm==4.59.0
